Merge from JDK11, manual copy.