@@ -20,15 +20,15 @@ public class RowEditorModel {
 	}
 
 	public void addEditorForRow(int row, TableCellEditor e) {
-		data.put(new Integer(row), e);
+		data.put(row, e);
 	}
 
 	public void removeEditorForRow(int row) {
-		data.remove(new Integer(row));
+		data.remove(row);
 	}
 
 	public TableCellEditor getEditor(int row) {
-		return data.get(new Integer(row));
+		return data.get(Integer.valueOf(row));
 	}
 
 }
